--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@progress/kendo-data-query": "^1.7.0",
     "@progress/kendo-drawing": "^1.20.1",
+    "@progress/kendo-font-icons": "^3.0.0",
     "@progress/kendo-licensing": "^1.3.5",
     "@progress/kendo-react-animation": "^8.0.0",
     "@progress/kendo-react-buttons": "^8.0.0",
@@ -57,8 +59,12 @@
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.2",
+    "cldr-core": "^45.0.0",
+    "cldrjs": "^0.5.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^3.5.2"
