--- a/package.json
+++ b/package.json
@@ -62,8 +62,10 @@
     "axios": "^1.7.2",
     "cldr-core": "^45.0.0",
     "cldrjs": "^0.5.5",
+    "i18next": "^23.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
