--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     "cldrjs": "^0.5.5",
     "i18next": "^23.11.5",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
